Refactored for improved item caching and retrieval.