@@ -1,15 +1,15 @@
 package org.unitedlands.storage.gui.filter;
 
+import org.bukkit.inventory.ItemStack;
 import org.unitedlands.UnitedLib;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public final class ItemGrouper {
 
     private ItemGrouper() {}
 
-    private static List<String> cachedItems = null;
+    private static LinkedHashMap<String, ItemStack> cache = null;
 
     private static final Set<String> MODIFIERS = Set.of(
         "SMOOTH", "CHISELED", "CUT", "POLISHED", "CRACKED", "MOSSY",
@@ -18,20 +18,43 @@ public final class ItemGrouper {
         "OXIDIZED", "LIGHT"
     );
 
-    public static List<String> getAllItems() {
-        if (cachedItems == null) {
-            cachedItems = new ArrayList<>(UnitedLib.getInstance().getItemFactory().getItemList());
-            Collections.sort(cachedItems);
+    private static LinkedHashMap<String, ItemStack> buildCache() {
+        var factory = UnitedLib.getInstance().getItemFactory();
+        var names   = new ArrayList<>(factory.getItemList());
+        Collections.sort(names);
+
+        var map = new LinkedHashMap<String, ItemStack>(names.size());
+        for (var name : names) {
+            var lower = name.toLowerCase();
+            if (lower.contains("icon") || lower.contains("stage"))
+                continue;
+
+            var stack = factory.getItemStack(name, 1);
+            if (stack != null && stack.getItemMeta() != null)
+                map.put(name, stack);
         }
-        return cachedItems;
+        return map;
+    }
+
+    private static LinkedHashMap<String, ItemStack> getCache() {
+        if (cache == null) cache = buildCache();
+        return cache;
+    }
+
+    public static ItemStack getCachedStack(String name) {
+        return getCache().get(name);
+    }
+
+    public static List<String> getAllItems() {
+        return new ArrayList<>(getCache().keySet());
     }
 
     public static List<String> filtered(String searchTerm) {
         if (searchTerm.isEmpty()) return getAllItems();
         var lower = searchTerm.toLowerCase();
-        return getAllItems().stream()
+        return getCache().keySet().stream()
                 .filter(n -> n.toLowerCase().contains(lower))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static String groupKeyword(String itemName) {
